--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
   "author": "fyears",
   "license": "MIT",
   "dependencies": {
-    "zerorpc": "fyears/zerorpc-node"
+    "zerorpc": "fyears/zerorpc-node",
+    "electron-localshortcut": "^2.0.2"
   },
   "devDependencies": {
     "electron": "^1.4.1",
