--- a/app/package.json
+++ b/app/package.json
@@ -16,18 +16,21 @@
   "author": "fyears",
   "license": "MIT",
   "dependencies": {
-    "zerorpc": "fyears/zerorpc-node",
-    "electron-localshortcut": "^2.0.2"
+    "bootstrap": "^4.0.0-beta",
+    "electron-localshortcut": "^2.0.2",
+    "jquery": "^3.2.1",
+    "startbootstrap-sb-admin": "file:bootstrap",
+    "zerorpc": "github:fyears/zerorpc-node"
   },
   "devDependencies": {
-    "electron": "^1.4.1",
+    "electron": "^1.7.6",
     "electron-packager": "^8.5.1",
-    "eslint": "^4.3.0",
+    "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1"
   }
 }
